--- a/src/App.scss
+++ b/src/App.scss
@@ -64,3 +64,41 @@ h1{
         }
     }
 }
+.react-router-modal__modal-open {
+    overflow: hidden;
+  }
+
+  .react-router-modal__container {
+    position: fixed;
+    z-index: 1000
+  }
+
+  .react-router-modal__backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    background-color: rgba(0,0,0,0.5)
+  }
+
+  .react-router-modal__modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    border-radius: 5px;
+    border: 1px solid #777;
+
+    height: 400px;
+    width: 400px;
+
+    div {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+    }
+  }
